--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
         const e = document.querySelector(".loader-wrapper");
         // e.style.display = "none";
         setTimeout(() => {
-          window.location.href = "https://lgarin211.github.io/";
+          window.location.href = "http://eyeai.lahoras.my.id/";
           e.style.display = "none";
         }, 2000);
       });
